src/test/ui/type-alias-impl-trait/issue-52843.full_tait.stderr
warning: the feature `type_alias_impl_trait` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/issue-52843.rs:3:32
   |
LL | #![cfg_attr(full_tait, feature(type_alias_impl_trait))]
   |                                ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #63063 <https://github.com/rust-lang/rust/issues/63063> for more information

error[E0277]: the trait bound `T: Default` is not satisfied
  --> $DIR/issue-52843.rs:6:15
   |
LL | type Foo<T> = impl Default;
   |               ^^^^^^^^^^^^ the trait `Default` is not implemented for `T`
   |
help: consider restricting type parameter `T`
   |
LL | type Foo<T: Default> = impl Default;
   |           ^^^^^^^^^

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0277`.
